update pom.xml to use yeoman-maven-plugin